@@ -12,11 +12,10 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'application'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.commercehub.gradle.plugin.avro'
-apply plugin: 'com.bmuschko.docker-java-application'
+apply plugin: 'com.bmuschko.docker-spring-boot-application'
 
 repositories {
     mavenCentral()
@@ -40,16 +39,10 @@ configurations.all {
     exclude group: 'org.slf4j', module: 'slf4j-log4j12'
 }
 
-mainClassName = 'de.contract.ContractTypeKstreamApplication'
-
 docker {
-    javaApplication {
+    springBootApplication {
         baseImage = 'openjdk:8-alpine'
         tag = 'contract-type-kstream:latest'
-        ports = [9000, 6000]
     }
 }
 
-dockerDistTar {
-    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
-}
